# rpi_pico_hal_learning

./: Cargo.toml  calculatuons.ipynb  deploy_debug.sh
.cargo/: config
src/: main.rs  scale.rs  servo.rs
