[package]
name = "rpi_pico_hal_learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp-pico = "0.5.0"
rp2040-hal = "0.6.0"
fugit = "0.3.6"
panic-halt = "0.2.0"
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
embedded-hal = "1.0.0-alpha.8"
nb = "1.0.0"